# Mveng

./: .gitignore  README.md
mveng/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.whisper  Makefile  docker-compose.yml
mveng/ollama/ollama/: id_ed25519  id_ed25519.pub
mveng/ollama/ollama-webui/: webui.db
mveng/src/: main.rs
mveng/src/static/: index.html
